# TS-RegisterWEB

./: .env.dev  Dockerfile  db.sqlite3  manage.py  pyproject.toml
TS_REGISTERWEB/: asgi.py  settings.py  urls.py  wsgi.py
config/: database.py  settings.py
src/controller/: register_user_controller.py
src/dao/: register_user_dao.py
src/model/: register_user_model.py
web/: app.py
web/templates/: base.html  home.html  register_user.html  register_user_form.html
