[tool.poetry]
name = "ts-registerweb"
version = "0.1.0"
description = ""
authors = ["wstiehler <william.stiehler@evoluinfo.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.0"
SQLAlchemy = "^1.4.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
