[tool.poetry]
name = "ts-registerweb"
version = "0.1.0"
description = "Refatoring to Python"
authors = ["wstiehler <william.stiehler@evoluinfo.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
postgres = "^3.0.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
